--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,3 +7,4 @@ linter:
     sort_pub_dependencies: false
     public_member_api_docs: false
     one_member_abstracts: false
+    prefer_constructors_over_static_methods: false
