--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   provider: ^6.0.5
+  meta: ^1.9.1
+  clock: ^1.1.1
+  slugid: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +26,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   very_good_analysis: ^5.0.0+1
   mocktail: ^0.3.0
+  faker_dart: ^0.1.11
 
 flutter:
   uses-material-design: true
