feat: TodoListCubit implementation of load, create (not ui), delete and filter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   meta: ^1.9.1
   clock: ^1.1.1
   slugid: ^1.1.2
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
