--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   clock: ^1.1.1
   slugid: ^1.1.2
   flutter_easyloading: ^3.0.5
+  validatorless: ^1.2.3
 
 dev_dependencies:
   flutter_test:
